Fixed hero image from stretching bug and fixed divere from showing 1px bleed line bug

--- a/public/css/pages/home.css
+++ b/public/css/pages/home.css
@@ -45,8 +45,14 @@
 
 #hero-image {
   padding-top: 64px;
-  width: 90vw;
+  width: 100%;
+  height: 100%;
   max-width: 500px;
+}
+
+#divider {
+  position: relative;
+  top: -1px;
 }
 
 .action-button {
